package com.zym.pattern.adapter.class_adapter;

/**
 * @author zhouyumeng
 * @date 2022/01/05
 **/
public interface Voltage5V {

    int output5V(Voltage220V voltage220V);

}
