@startuml
'https://plantuml.com/class-diagram

interface Voltage5V{
    output5V(): int
}
class Voltage220V{
    output220V(): int
}
class VoltageAdapter{
    output5V(): int
}
class Phone{
    charging(voltage5V: Voltage5V): void
}

Voltage5V <|.. VoltageAdapter
Voltage220V <|-- VoltageAdapter
Phone --> Voltage5V


@enduml